# Gemma2Hackathon

.devcontainer/: devcontainer.json
gemma_hackathon/: .env  pyproject.toml
gemma_hackathon/gemma_hackathon/: AllStatus.csv  Leads.csv  Mandated.csv  frontend.py  main.py  requirements.txt
