[tool.poetry]
name = "gemma-hackathon"
version = "0.1.0"
description = ""
authors = ["Muhammad Hamza <hamzaadil56@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.9"
langchain-community = "^0.3.8"
langchain-groq = "^0.2.1"
pandas = "^2.2.3"
langchain-text-splitters = "^0.3.2"
langchain-chroma = "^0.1.4"
langchain-huggingface = "^0.1.2"
python-dotenv = "^1.0.1"
streamlit = "^1.40.2"
faiss-cpu = "^1.9.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
